# UDP-Chat-App

./: CMakeLists.txt  README.md  client1_input.txt  client2_input.txt  portal.cc  portal.h
client/: client_main.cc  gui.cc  gui.h  udp_client_portal.cc  udp_client_portal.h
server/: server_main.cc  udp_server_portal.cc  udp_server_portal.h  user.cc  user.h  users.txt
